tests/machine/x/scala/json_builtin.error
exit status 1
/workspace/mochi/tests/machine/x/scala/json_builtin.scala:6: error: type mismatch;
 found   : json_builtin.M
 required: Map[String,Any]
    println(scala.util.parsing.json.JSONObject(m).toString())
                                               ^
one error found
